--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body>
+<body class="bg-neutral-50">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
